--- a/editor.cabal
+++ b/editor.cabal
@@ -70,6 +70,8 @@ executable editor
                        mtl          >=2.1.2     && <2.2,
                        containers   >=0.5.3.1   && <0.6,
                        directory    >=1.2       && <1.3,
+                       JuicyPixels  >=3.1       && <3.2,
+                       vector       >=0.10      && <0.11,
                        freetype2    -any,
                        monad-loops  -any
 
