--- a/editor.cabal
+++ b/editor.cabal
@@ -51,7 +51,9 @@ executable editor
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  -- other-modules:
+  -- other-modules:       Graphics.Utils
+
+  ghc-options:         -Wall
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
@@ -66,12 +68,14 @@ executable editor
   build-depends:       base >=4.7   && <4.8,
                        GLFW-b       >=1.4.6     && <1.5,
                        OpenGL       >=2.9.1.0   && <2.10,
+                       OpenGLRaw    >=1.4       && <1.5,
                        lens         >=4.0       && <4.1,
                        mtl          >=2.1.2     && <2.2,
                        containers   >=0.5.3.1   && <0.6,
                        directory    >=1.2       && <1.3,
                        JuicyPixels  >=3.1       && <3.2,
                        vector       >=0.10      && <0.11,
+                       bytestring   >=0.10      && <0.11,
                        freetype2    -any,
                        monad-loops  -any
 
