--- a/editor.cabal
+++ b/editor.cabal
@@ -59,23 +59,24 @@ executable editor
   default-language:    Haskell2010
 
   -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
+  other-extensions:  TemplateHaskell
 
   -- Directories containing source files.
   hs-source-dirs:      src
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7   && <4.8,
-                       GLFW-b       >=1.4.6     && <1.5,
-                       OpenGL       >=2.9.1.0   && <2.10,
-                       OpenGLRaw    >=1.4       && <1.5,
-                       lens         >=4.0       && <4.1,
-                       mtl          >=2.1.2     && <2.2,
-                       containers   >=0.5.3.1   && <0.6,
-                       directory    >=1.2       && <1.3,
-                       JuicyPixels  >=3.1       && <3.2,
-                       vector       >=0.10      && <0.11,
-                       bytestring   >=0.10      && <0.11,
+  build-depends:       base             >=4.7   && <4.8,
+                       GLFW-b           >=1.4.6     && <1.5,
+                       OpenGL           >=2.9.1.0   && <2.10,
+                       OpenGLRaw        >=1.4       && <1.5,
+                       lens             >=4.0       && <4.1,
+                       mtl              >=2.1.2     && <2.2,
+                       containers       >=0.5.3.1   && <0.6,
+                       directory        >=1.2       && <1.3,
+                       JuicyPixels      >=3.1       && <3.2,
+                       vector           >=0.10      && <0.11,
+                       bytestring       >=0.10      && <0.11,
+                       template-haskell >= 2.9      && <2.10,
                        freetype2    -any,
                        monad-loops  -any
 
